--- a/ActiveMQ-5.7/.classpath
+++ b/ActiveMQ-5.7/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="com/wjb/activemq_1/" kind="src" path="src"/>
+	<classpathentry excluding="src/|src/com/wjb/activemq_1/" kind="src" path=""/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Administrator/Desktop/中间件/activeMQ/activemq_jar/activemq-broker-5.12.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Administrator/Desktop/中间件/activeMQ/activemq_jar/activemq-client-5.12.1.jar"/>
